<resources>
    <string name="app_name">Bill Calculator</string>
    <string name="amt">Amount</string>
    <string name="numPacks">Num of Persons</string>
    <string name="SVS">SVS</string>
    <string name="SVSNO">NO SVS</string>
    <string name="gst">GST</string>
    <string name="gstno">NO GST</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="discount">Discount(%)</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="calc">CALCULATE</string>
</resources>