<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/amtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amt" />

    <EditText
        android:id="@+id/amtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/numPacksText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numPacks" />

    <EditText
        android:id="@+id/numPacksInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/togSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="@string/SVS"
            android:textOff="@string/SVSNO" />

        <ToggleButton
            android:id="@+id/togGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="@string/gst"
            android:textOff="@string/gstno" />
    </LinearLayout>

    <TextView
        android:id="@+id/disText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/disInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/radioPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />

    </LinearLayout>

    <Button
        android:id="@+id/calcbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc" />

    <TextView
        android:id="@+id/billText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eachPayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />

</LinearLayout>